Bug 1950464 [Wayland] Use wl_buffer id instead of wl_buffer to match detached buffer r=emilio

It's possible we get wl_buffer detach callback after wl_buffer delete as the events are waiting in thread queues.
In such case we can't match wl_buffer from wl_buffer::detach as it's already cleared from WaylandBuffer class.
In this patch store and use wl_buffer as id to match wl_buffers.

Differential Revision: https://phabricator.services.mozilla.com/D239873